add TELEMETER_URL to saas-clusters-service

--- a/data/services/ocm/cs/cicd/saas-uhc-clusters-service.yaml
+++ b/data/services/ocm/cs/cicd/saas-uhc-clusters-service.yaml
@@ -43,6 +43,7 @@ resourceTemplates:
     IMAGE_REPOSITORY: app-sre/uhc-clusters-service
     REPLICAS: 3
     GATEWAY_URL: unix://localhost/sockets/egress.socket
+    TELEMETER_URL: ${TELEMETER_BASE_URL}
     # SSO_BASE_URL is defined at the environment parameters level
     TOKEN_URL: ${SSO_BASE_URL}/protocol/openid-connect/token
     JWKS_URL: ${SSO_BASE_URL}/protocol/openid-connect/certs
