apply_immediately for compliance redis in insights-fedramp-stage
Signed-off-by: Feng Huang <fehuang@redhat.com>

--- a/resources/terraform/resources/insights/fedramp/stage/elasticache/elasticache-compliance-2.yml
+++ b/resources/terraform/resources/insights/fedramp/stage/elasticache/elasticache-compliance-2.yml
@@ -16,3 +16,4 @@ snapshot_window: 03:30-05:30
 snapshot_retention_limit: 5
 availability_zones: ["us-east-1b", "us-east-1c"]
 subnet_group_name: insights-stage-ec-subnet-group
+apply_immediately: true
