--- a/resources/jenkins/global/defaults.yaml
+++ b/resources/jenkins/global/defaults.yaml
@@ -19,9 +19,9 @@
     quay_org: app-sre
     include_path: ''
     qontract_reconcile_image_tag: '8f393b1'
-    qontract_reconcile_image: 'quay.io/app-sre/qontract-reconcile:{qontract_reconcile_image_tag}'
+    # qontract_reconcile_image: 'quay.io/app-sre/qontract-reconcile:{qontract_reconcile_image_tag}'
     # replace the above line if quay.io is down
-    # qontract_reconcile_image: 'gcr.io/app-sre/qontract-reconcile:{qontract_reconcile_image_tag}'
+    qontract_reconcile_image: 'gcr.io/app-sre/qontract-reconcile:{qontract_reconcile_image_tag}'
 
 - wrapper:
     name: timeout_wrapper
