undo read only change in saas file

--- a/data/services/quayio/saas/quayio.yaml
+++ b/data/services/quayio/saas/quayio.yaml
@@ -131,7 +131,7 @@ resourceTemplates:
     ref: 2819ff82cdea208d7346461b601f61afd7aed83a
     parameters:
       QUAY_APP_DEPLOYMENT_REPLICAS: 33
-      QUAY_APP_CONFIG_SECRET: quay-config-secret-readonly
+      QUAY_APP_CONFIG_SECRET: quay-config-secret
       QUAY_APP_COMPONENT_ANNOTATIONS_VALUE: "quay_builders_issue_2021_12_22_1" # Bounce to fix builders
 
       # Blue deployment
