remove secrets from  platform-mq-perf
Signed-off-by: Feng Huang <fehuang@redhat.com>

--- a/data/services/insights/strimzi/namespaces/perf-platform-mq-perf.yml
+++ b/data/services/insights/strimzi/namespaces/perf-platform-mq-perf.yml
@@ -97,7 +97,7 @@ terraformResources:
 managedResourceTypes:
 - Role
 - RoleBinding
-- Secret
+# - Secret
 
 openshiftResources:
 - provider: resource
