Add route as Managed Resource type

--- a/data/services/codeready-analytics/cicd/saas/saas-fabric8-analytics-stack-report-ui.yaml
+++ b/data/services/codeready-analytics/cicd/saas/saas-fabric8-analytics-stack-report-ui.yaml
@@ -24,6 +24,7 @@ managedResourceTypes:
 - DeploymentConfig
 - Service
 - PersistentVolumeClaim
+- Route
 
 imagePatterns:
 - quay.io/app-sre/rhel-fabric8-analytics-stack-report-ui
