added new secured route

--- a/data/services/codeready-analytics/namespaces/bayesian-preview.yml
+++ b/data/services/codeready-analytics/namespaces/bayesian-preview.yml
@@ -130,6 +130,8 @@ openshiftResources:
     path: /dsaas-stg/bayesian-preview/bayesian-data-importer.route.yaml
   - provider: route
     path: /dsaas-stg/bayesian-preview/APIcast.yaml
+  - provider: route
+    path: /dsaas-stg/bayesian-preview/crda-new-ui.yaml
   - provider: resource
     path: /dsaas-stg/dsaas-deploy.serviceaccount.yaml
 
