ocm recycle clusters-service pods on secret update

--- a/data/services/ocm/namespaces/uhc-integration.yml
+++ b/data/services/ocm/namespaces/uhc-integration.yml
@@ -35,6 +35,8 @@ openshiftResources:
 - provider: vault-secret
   path: app-interface/app-sre-stage/uhc-integration/clusters-service
   version: 5
+  annotations:
+    qontract.recycle: "true"
 - provider: resource-template
   type: extracurlyjinja2
   path: /services/ocm/provision-shards.secret.yaml
