--- a/data/services/ocm/shared-resources/stage.yml
+++ b/data/services/ocm/shared-resources/stage.yml
@@ -10,6 +10,8 @@ openshiftResources:
 - provider: vault-secret
   path: app-interface/app-sre-stage/uhc-stage/clusters-service
   version: 20
+  annotations:
+    qontract.recycle: "true"
 - provider: resource-template
   type: extracurlyjinja2
   path: /services/ocm/provision-shards.secret.yaml
