--- a/data/services/ocm/shared-resources/production.yml
+++ b/data/services/ocm/shared-resources/production.yml
@@ -10,6 +10,8 @@ openshiftResources:
 - provider: vault-secret
   path: app-interface/app-sre/uhc-production/clusters-service
   version: 25
+  annotations:
+    qontract.recycle: "true"
 - provider: resource-template
   type: extracurlyjinja2
   path: /services/ocm/provision-shards.secret.yaml
