Update ccx-notification-service image on prod (temporal)

--- a/data/services/insights/ccx-data-pipeline/saas.yml
+++ b/data/services/insights/ccx-data-pipeline/saas.yml
@@ -169,11 +169,12 @@ resourceTemplates:
       IMAGE_TAG: 0f7e8b0
       CONTENT_SERVICE_PORT: 10000
       JOB_SCHEDULE: "*/3 * * * *"
+      NOTIFICATION_RESEND_COOLDOWN: "29m"
   - namespace:
       $ref: /services/insights/ccx-data-pipeline/namespaces/ccx-data-pipeline-prod.yml
-    ref: ff800ef56ad0b7a310aa8dbe52bde323bb130371
+    ref: 141430778b0c37888a3a39a944e975e299e026cb
     parameters:
-      IMAGE_TAG: 533410b
+      IMAGE_TAG: 0f7e8b0
       CONTENT_SERVICE_PORT: 10000
       JOB_SCHEDULE: "*/15 * * * *"
 
