--- a/resources/insights-stage/subscriptions/yupana-env.configmap.yaml
+++ b/resources/insights-stage/subscriptions/yupana-env.configmap.yaml
@@ -13,6 +13,8 @@ data:
   retry-time: '480'
   satellite-host-ttl: '30'
   target-cpu-utilization: '75'
+  garbage-collection-interval: '259200'
+  archive-record-retention-period: '172800'
 kind: ConfigMap
 metadata:
   labels:
