subscriptions-prod increase max_wal_size to 3000

--- a/resources/terraform/resources/insights/production/rds/postgres10-parameter-group-subscriptions-prod.yml
+++ b/resources/terraform/resources/insights/production/rds/postgres10-parameter-group-subscriptions-prod.yml
@@ -13,3 +13,6 @@ parameters:
 - name: shared_preload_libraries
   value: pg_stat_statements
   apply_method: pending-reboot
+- name: max_wal_size
+  value: 3000
+  apply_method: pending-reboot
