--- a/data/aws/app-sre/dns/devshift.net.yaml
+++ b/data/aws/app-sre/dns/devshift.net.yaml
@@ -49,13 +49,13 @@ records:
   - ns-718.awsdns-25.net
 
 # https://issues.redhat.com/browse/APPSRE-4156
-- name: fedramp
-  type: NS
-  records:
-  - ns-0.awsdns-us-gov-00.com
-  - ns-1024.awsdns-us-gov-00.org
-  - ns-1536.awsdns-us-gov-00.us
-  - ns-512.awsdns-us-gov-00.net
+# - name: fedramp
+#   type: NS
+#   records:
+#   - ns-0.awsdns-us-gov-00.com
+#   - ns-1024.awsdns-us-gov-00.org
+#   - ns-1536.awsdns-us-gov-00.us
+#   - ns-512.awsdns-us-gov-00.net
 
 - {name: vault, type: CNAME, _target_cluster: {$ref: /openshift/app-sre-prod-01/cluster.yml}}
 - {name: vault.stage, type: CNAME, _target_cluster: {$ref: /openshift/app-sre-stage-02/cluster.yml}}
