add comments on fedramp.devshift.net public zone

--- a/data/aws/app-sre/dns/fedramp.devshift.net.yaml
+++ b/data/aws/app-sre/dns/fedramp.devshift.net.yaml
@@ -12,4 +12,6 @@ account:
 unmanaged_record_names:
 - '^_acme-challenge.*'
 
+# no records should be managed here
+# https://issues.redhat.com/browse/APPSRE-4156
 records: []
