remove jtanner from slack-cluster-usergroups

--- a/data/teams/insights/users/jtanner.yml
+++ b/data/teams/insights/users/jtanner.yml
@@ -9,6 +9,9 @@ org_username: jtanner
 github_username: jctanner
 quay_username: jtanner
 
+# adding this since user is not found in slack (never logged in?)
+tag_on_cluster_updates: false
+
 roles:
 - $ref: /teams/insights/roles/insights-engineers.yml
 - $ref: /teams/insights/roles/automation-hub.yml
