--- a/data/services/insights/pdf-generator/deploy-clowder.yml
+++ b/data/services/insights/pdf-generator/deploy-clowder.yml
@@ -44,6 +44,9 @@ resourceTemplates:
       $ref: /services/insights/ephemeral/namespaces/ephemeral-base.yml
     disable: true  # do not create an app-sre deploy job for ephemeral namespace
     ref: internal  # populated by bonfire
+    parameters:
+      MEMORY_REQUEST: 256Mi
+      MEMORY_LIMIT: 512Mi
   - namespace:
       $ref: /services/insights/pdf-generator/namespaces/pdf-generator-stage.yml
     ref: main
