--- a/data/services/insights/compliance/deploy.yml
+++ b/data/services/insights/compliance/deploy.yml
@@ -107,28 +107,28 @@ resourceTemplates:
       FLOORIST_SCHEDULE: '0 0 * * *'
   - namespace:
       $ref: /services/insights/compliance/namespaces/stage-compliance-stage.yml
-    ref: 8a004bde62afa187f1ca0252e5c7b12da039e3b6
+    ref: 1655b4c64c75e9cf5f0e707c0e2adad408345b46
     upstream:
       instance:
         $ref: /dependencies/ci-int/ci-int.yml
       name: RedHatInsights-compliance-backend-gh-build-master
     parameters:
-      IMAGE_TAG: 8a004bd
-      SETTINGS__FORCE_IMPORT_SSGS: 'true'
+      IMAGE_TAG: 1655b4c
+      SETTINGS__FORCE_IMPORT_SSGS: 'false'
       FLOORIST_SUSPEND: 'false'
       FLOORIST_IMAGE_TAG: b57a5a8
       FLOORIST_BUCKET_SECRET_NAME: insights-metrics-export-stage
       FLOORIST_SCHEDULE: '10 0 * * *'
   - namespace:
       $ref: /services/insights/compliance/namespaces/compliance-fedramp-stage.yml
-    ref: 8a004bde62afa187f1ca0252e5c7b12da039e3b6
+    ref: 1655b4c64c75e9cf5f0e707c0e2adad408345b46
     upstream:
       instance:
         $ref: /dependencies/ci-int/ci-int.yml
       name: RedHatInsights-compliance-backend-gh-build-master
     parameters:
-      IMAGE_TAG: 8a004bd
-      SETTINGS__FORCE_IMPORT_SSGS: 'true'
+      IMAGE_TAG: 1655b4c
+      SETTINGS__FORCE_IMPORT_SSGS: 'false'
       FLOORIST_IMAGE_TAG: b57a5a8
       FLOORIST_SCHEDULE: '10 0 * * *'
   - namespace:
