POL-621 Update policies turnpike settings on fedramp-stage

--- a/data/services/insights/turnpike/deploy.yml
+++ b/data/services/insights/turnpike/deploy.yml
@@ -392,12 +392,12 @@ resourceTemplates:
           origin: http://web.turnpike-stage.svc.cluster.local:5000/_healthcheck/
         - name: policies-engine-stage
           route: /api/policies-engine/
-          origin: http://policies-engine.policies-stage.svc.cluster.local:8080/
+          origin: http://policies-engine-service.policies-stage.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: policies-ui-backend-stage
           route: /api/policies-ui-backend/
-          origin: http://policies-ui-backend.policies-stage.svc.cluster.local:8080/
+          origin: http://policies-ui-backend-service.policies-stage.svc.cluster.local:8000/
           auth:
             saml: "'crc-policies-team' in user['Role']"
         - name: module-update-router-events
