--- a/data/services/insights/policies/deploy.yml
+++ b/data/services/insights/policies/deploy.yml
@@ -75,6 +75,7 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/policies/namespaces/policies-fedramp-stage.yml
+    delete: true
     ref: 54f5cc848d0fa6b064c49a9bf5e6888f95d058cf
     parameters:
       IMAGE_TAG: b128196
