add gtanzill to gabi-cloudigrade user
Signed-off-by: Feng Huang <fehuang@redhat.com>

--- a/data/services/gabi/gabi-instances/gabi-cloudigrade.yml
+++ b/data/services/gabi/gabi-instances/gabi-cloudigrade.yml
@@ -12,6 +12,7 @@ description: |
 signoffManagers:
 - $ref: /teams/insights/users/gtanzill.yml
 users:
+- $ref: /teams/insights/users/gtanzill.yml
 - $ref: /teams/insights/users/abellott.yml
 - $ref: /teams/insights/users/brasmith.yml
 - $ref: /teams/insights/users/kblack.yml
