Adding new CSSRE associate: vbommana

--- a/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
+++ b/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
@@ -227,6 +227,8 @@ resourceTemplates:
         - "raananda"
         - "sclarkso"
         - "jsarnovs"
+        - "vbommana"
+        - "jcueto"
 
       SUPPORTED_CLOUD_PROVIDERS:
         - name: aws
