--- a/resources/terraform/resources/image-builder/stage/asg/worker_aoc.cfg
+++ b/resources/terraform/resources/image-builder/stage/asg/worker_aoc.cfg
@@ -19,7 +19,7 @@ write_files:
       AZURE_ACCOUNT_IMAGE_BUILDER_VID={{{ vault('app-sre/integrations-output/terraform-resources/app-sre-stage-01/workers-stage/azure-service-account', 'version_id') }}}
       AWS_ACCOUNT_IMAGE_BUILDER_ARN={{{ vault('app-sre/integrations-output/terraform-resources/app-sre-stage-01/workers-stage/aws-account', 'arn') }}}
       AWS_ACCOUNT_IMAGE_BUILDER_VID={{{ vault('app-sre/integrations-output/terraform-resources/app-sre-stage-01/workers-stage/aws-account', 'version_id') }}}
-      SYSTEM_HOSTNAME_PREFIX={{{ workspace_name }}}-worker-aoc
+      SYSTEM_HOSTNAME_PREFIX=worker-aoc-{{{ workspace_name }}}
       SECRETS_MANAGER_ENDPOINT_URL=https://secretsmanager.{{{ aws_region }}}.amazonaws.com
       CLOUDWATCH_LOGS_ENDPOINT_URL=https://logs.{{{ aws_region }}}.amazonaws.com
       CLOUDWATCH_LOG_GROUP=workers-aoc-{{{ workspace_name }}}
