Add new ci-ext local permissions to current groups

--- a/data/teams/insights/roles/insights-engineers.yml
+++ b/data/teams/insights/roles/insights-engineers.yml
@@ -14,6 +14,7 @@ permissions:
 - $ref: /teams/insights/github-teams/openshift-prod-cluster-access.yml
 - $ref: /teams/insights/github-teams/openshift-v4-prod-cluster-access.yml
 - $ref: /dependencies/ci-ext/permissions/ci-ext.yml
+- $ref: /dependencies/ci-ext/permissions/ci-ext-job-control.yml
 - $ref: /dependencies/ci-int/permissions/ci-int.yml
 - $ref: /services/observability/permissions/observability-access.yml
 
