--- a/data/teams/app-sre/roles/app-sre-interns.yml
+++ b/data/teams/app-sre/roles/app-sre-interns.yml
@@ -10,6 +10,7 @@ permissions:
 # jenkins
 - $ref: /dependencies/ci-int/permissions/ci-int-ro.yml
 - $ref: /dependencies/ci-ext/permissions/ci-ext.yml
+- $ref: /dependencies/ci-ext/permissions/ci-ext-job-control.yml
 # observability
 - $ref: /services/observability/permissions/observability-access.yml
 # slack
