--- a/data/teams/insights/roles/insights-tools.yml
+++ b/data/teams/insights/roles/insights-tools.yml
@@ -8,6 +8,7 @@ permissions:
 - $ref: /teams/insights/quay-teams/cloudsre.yml
 - $ref: /teams/insights/github-teams/insights-vault-admin.yml
 - $ref: /dependencies/ci-ext/permissions/ci-ext.yml
+- $ref: /dependencies/ci-ext/permissions/ci-ext-job-control.yml
 - $ref: /dependencies/unleash/permissions/insights-stage.yml
 - $ref: /dependencies/unleash/permissions/insights.yml
 
