--- a/data/teams/sd-sre/roles/sre.yml
+++ b/data/teams/sd-sre/roles/sre.yml
@@ -7,6 +7,7 @@ name: sre
 permissions:
 - $ref: /dependencies/ci-int/permissions/ci-int.yml
 - $ref: /dependencies/ci-ext/permissions/ci-ext.yml
+- $ref: /dependencies/ci-ext/permissions/ci-ext-job-control.yml
 - $ref: /dependencies/vault/permissions/sd-sre.yml
 - $ref: /services/observability/permissions/observability-access.yml
 
