Fix service account in observatorium-logs
Signed-off-by: Matej Gera <matejgera@gmail.com>

--- a/data/services/rhobs/observatorium/observatorium-logs/cicd/saas.yaml
+++ b/data/services/rhobs/observatorium/observatorium-logs/cicd/saas.yaml
@@ -196,6 +196,7 @@ resourceTemplates:
       LOKI_RESULTS_CACHE_MEMORY_REQUESTS: '1329Mi'
       LOKI_RESULTS_CACHE_MEMORY_LIMITS: '1536Mi'
       LOKI_PVC_REQUEST: '10Gi'
+      SERVICE_ACCOUNT_NAME: observatorium-logs
 - name: conprof-observatorium-logs-rbac
   path: /resources/services/conprof-observatorium-logs-rbac-template.yaml
   url: https://github.com/rhobs/configuration
