--- a/data/services/rhobs/observatorium/observatorium-logs/namespaces/observatorium-logs-production.yml
+++ b/data/services/rhobs/observatorium/observatorium-logs/namespaces/observatorium-logs-production.yml
@@ -39,4 +39,6 @@ terraformResources:
   defaults: /terraform/resources/observatorium-logs/s3-private-expires-14-days.yml
   output_resource_name: observatorium-logs-production-s3
 
-openshiftResources: []
+openshiftResources:
+- provider: resource
+  path: /app-sre/observatorium-logs-production/observatorium-logs.serviceaccount.yaml
