Add managed resrouce type
Signed-off-by: Matej Gera <matejgera@gmail.com>

--- a/data/services/rhobs/observatorium/observatorium-logs/namespaces/observatorium-logs-production.yml
+++ b/data/services/rhobs/observatorium/observatorium-logs/namespaces/observatorium-logs-production.yml
@@ -25,7 +25,8 @@ grafanaUrl: https://grafana.app-sre.devshift.net/d/Lg-mH0rizaSJDKSADX/api-logs?o
 
 managedRoles: true
 
-managedResourceTypes: []
+managedResourceTypes:
+- ServiceAccount
 
 managedTerraformResources: true
 
