Automation Hub: increase worker resources

--- a/data/services/insights/automation-hub/deploy-clowder.yml
+++ b/data/services/insights/automation-hub/deploy-clowder.yml
@@ -101,3 +101,8 @@ resourceTemplates:
         GALAXY_API_REPLICAS: '3'
         PULP_CONTENT_APP_REPLICAS: '3'
         PULP_WORKER_REPLICAS: '1'
+
+        PULP_WORKER_MEMORY_REQUEST: 4Gi
+        PULP_WORKER_MEMORY_LIMIT: 4Gi
+        PULP_WORKER_CPU_REQUEST: '1'
+        PULP_WORKER_CPU_LIMIT: '1'
