Deploy for prod mirrormaker2 instance testing
Signed-off-by: Chris Mitchell <cmitchel@redhat.com>

--- a/data/services/insights/strimzi/saas.yml
+++ b/data/services/insights/strimzi/saas.yml
@@ -203,6 +203,13 @@ resourceTemplates:
       SRC_CLUSTER_BOOTSTRAP: ${KAFKA_BOOTSTRAP_HOST}:9093
       TGT_CLUSTER_BOOTSTRAP: consoledot-c-akllepav-bt-e--r-a.bf2.kafka.rhcloud.com:443
       MANAGED_KAFKA_CLIENT_ID: srvc-acct-6401d82b-9830-4ad5-a9a8-b9dc6479c4fe
+  - namespace:
+      $ref: /services/insights/strimzi/namespaces/platform-mq-prod.yml
+    ref: 5a504b56f83614a7efb40ce05b7abdf8a53fb3d5
+    parameters:
+      SRC_CLUSTER_BOOTSTRAP: ${KAFKA_BOOTSTRAP_HOST}:9093
+      TGT_CLUSTER_BOOTSTRAP: crcp--ue-k-c-s--u-v-ehnhkp-ep-a.bf2.kafka.rhcloud.com:443
+      MANAGED_KAFKA_CLIENT_ID: srvc-acct-895f64bd-81e2-42cf-914f-cee899e2955a
 - name: kafka-superuser
   path: /deploys/superuser.yaml
   url: https://github.com/RedHatInsights/platform-mq
