--- a/data/services/insights/host-inventory/queries/2022-01-06-check-duplicates-for-insights-ids.yml
+++ b/data/services/insights/host-inventory/queries/2022-01-06-check-duplicates-for-insights-ids.yml
@@ -11,5 +11,5 @@ query: |
   FROM hosts 
   WHERE account = '949189'
   GROUP BY insights_id 
-  HAVING count(*) > 1
-  ORDER BY count;
+  HAVING count(*) > 1;
+
