Fixed query validation errors

--- a/data/services/insights/host-inventory/queries/2022-01-06-get-hosts-with-spec-insights-id-and-acct.yml
+++ b/data/services/insights/host-inventory/queries/2022-01-06-get-hosts-with-spec-insights-id-and-acct.yml
@@ -9,4 +9,4 @@ output: stdout
 query: |
   SELECT id, provider_id, provider_type, canonical_facts ->> 'insights_id'
   FROM hosts 
-  WHERE account = '949189' AND insights_id = '5455a663-eed9-40c3-9c4f-0abb9e1d89a9'
+  WHERE account = '949189' AND insights_id = '5455a663-eed9-40c3-9c4f-0abb9e1d89a9';
