Fixed query validation errors

--- a/data/services/insights/host-inventory/queries/2022-01-06-check-duplicates-for-insights-ids.yml
+++ b/data/services/insights/host-inventory/queries/2022-01-06-check-duplicates-for-insights-ids.yml
@@ -10,6 +10,4 @@ query: |
   SELECT insights_id, count(*)
   FROM hosts 
   WHERE account = '949189'
-  GROUP BY insights_id 
-  HAVING count(*) > 1;
-
+  GROUP BY insights_id;
