--- a/data/services/insights/quickstarts/deploy.yml
+++ b/data/services/insights/quickstarts/deploy.yml
@@ -44,10 +44,15 @@ resourceTemplates:
       $ref: /services/insights/ephemeral/namespaces/ephemeral-base.yml
     disable: true  # do not create an app-sre deploy job for ephemeral namespace
     ref: internal  # populated by bonfire
+    parameters:
+      MIN_REPLICAS: 1
   - namespace:
       $ref: /services/insights/quickstarts/namespaces/quickstarts-stage.yml
     ref: main
+    upstream:
+      instance:
+        $ref: /dependencies/ci-ext/ci-ext.yml
+      name: RedHatInsights-quickstarts-gh-build-main
     parameters:
       ENV_NAME: stage 
-      API_PREFIX: /api/quickstarts/v1
       LOG_LEVEL: debug
