image-builder: Correct vault keys for aws-account secret

--- a/resources/jenkins/image-builder/secrets.yml
+++ b/resources/jenkins/image-builder/secrets.yml
@@ -3,8 +3,6 @@
     secret-path: "app-interface/image-builder/stage/aws-account"
     secret-values:
     - env-var: "PACKER_AWS_ACCESS_KEY_ID"
-      vault-key: aws-access-key-id
+      vault-key: access_key_id
     - env-var: "PACKER_AWS_SECRET_ACCESS_KEY"
-      vault-key: aws-secret-access-key
-    - env-var: "AWS_REGION"
-      vault-key: aws-region
+      vault-key: secret_access_key
