--- a/data/services/insights/host-inventory/queries/2022-01-07-check-duplicate-insights-ids.yml
+++ b/data/services/insights/host-inventory/queries/2022-01-07-check-duplicate-insights-ids.yml
@@ -1,7 +1,7 @@
 ---
 $schema: /app-interface/app-interface-sql-query-1.yml
 labels: {}
-name: 2022-01-06-check-hosts-with-spec-insights-id-and-acct
+name: 2022-01-07-check-duplicate-insights-ids
 namespace:
   $ref: /services/insights/host-inventory/namespaces/prod-host-inventory-prod.yml
 identifier: host-inventory-prod
@@ -9,4 +9,4 @@ output: stdout
 query: |
   SELECT id, canonical_facts ->> 'provider_id', canonical_facts ->> 'provider_type', canonical_facts ->> 'insights_id'
   FROM hosts 
-  WHERE account = '949189' AND insights_id = '5455a663-eed9-40c3-9c4f-0abb9e1d89a9';
+  WHERE account = '949189' AND canonical_facts ->> 'insights_id' = '5455a663-eed9-40c3-9c4f-0abb9e1d89a9';
