--- a/resources/jenkins/insights/ci-int/job-templates.yaml
+++ b/resources/jenkins/insights/ci-int/job-templates.yaml
@@ -36,6 +36,7 @@
         secrets:
         - *insights_ephemeral_oc_login
         - *app_interface_creds
+        - *insightsdroid_github
     builders:
     - shell: './smoke_test.sh'
     publishers:
