--- a/data/services/insights/rbac/deploy-clowder.yml
+++ b/data/services/insights/rbac/deploy-clowder.yml
@@ -116,7 +116,7 @@ resourceTemplates:
       GROUP_SEEDING_ENABLED: 'False'
       CELERY_WORKER_CPU_LIMIT: '700m'
       CELERY_WORKER_MEMORY_LIMIT: '1Gi'
-      CONFIG_MAP_RESTART: 2022-01-07
+      CONFIG_MAP_RESTART: '2022-01-07'
   - namespace:
       $ref: /services/insights/rbac/namespaces/rbac-fedramp-stage.yml
     ref: master
