--- a/data/services/insights/rbac/deploy-clowder.yml
+++ b/data/services/insights/rbac/deploy-clowder.yml
@@ -136,7 +136,7 @@ resourceTemplates:
       PERMISSION_SEEDING_ENABLED: 'False'
       ROLE_SEEDING_ENABLED: 'False'
       GROUP_SEEDING_ENABLED: 'False'
-      CONFIG_MAP_RESTART: 2022-01-07
+      CONFIG_MAP_RESTART: '2022-01-07'
   - namespace:
       $ref: /services/insights/rbac/namespaces/rbac-prod.yml
     ref: 51edf0a4bb6e027364217e034554cddf45190eaa
