--- a/data/services/ocm/namespaces/uhc-integration.yml
+++ b/data/services/ocm/namespaces/uhc-integration.yml
@@ -29,7 +29,8 @@ sharedResources:
 - $ref: /services/app-sre/shared-resources/quayio-pull-secret.yml
 - $ref: /services/ocm/shared-resources/ecr.yml
 - $ref: /services/ocm/shared-resources/service-accounts.yml
-- $ref: /services/ocm/shared-resources/common.yml
+# - $ref: /services/ocm/shared-resources/common.yml
+- $ref: /services/ocm/shared-resources/common-no-subscription-skus.yml
 
 openshiftResources:
 - provider: vault-secret
