--- a/data/teams/sd-sre/users/aweiteka.yml
+++ b/data/teams/sd-sre/users/aweiteka.yml
@@ -12,3 +12,4 @@ roles:
 - $ref: /teams/sd-sre/roles/sre.yml
 - $ref: /teams/cs-sre/roles/cs-sre-aws.yml
 - $ref: /teams/ocm/roles/ocm-resources-approver.yml
+- $ref: /teams/ocm/roles/subscription-skus-approver.yml
