--- a/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
+++ b/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
@@ -30,19 +30,19 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/ocm/namespaces/uhc-integration.yml
-    ref: 2c76076504903a543f952db0d6851ab3d3214005
-  # - namespace:
-  #     $ref: /services/ocm/namespaces/uhc-stage.yml
-  #   ref: e608867bce0a29ea4cb2a9e7b300c4590035f5d3
-  # - namespace:
-  #     $ref: /services/ocm/namespaces/uhc-stage-appsres04ue2.yml
-  #   ref: e608867bce0a29ea4cb2a9e7b300c4590035f5d3
+    ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
+  - namespace:
+      $ref: /services/ocm/namespaces/uhc-stage.yml
+    ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
+  - namespace:
+      $ref: /services/ocm/namespaces/uhc-stage-appsres04ue2.yml
+    ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
   # - namespace:
   #     $ref: /services/ocm/namespaces/uhc-production.yml
-  #   ref: e608867bce0a29ea4cb2a9e7b300c4590035f5d3
-  # - namespace:
-  #     $ref: /services/ocm/namespaces/uhc-stage-sso-test.yml
-  #   ref: e608867bce0a29ea4cb2a9e7b300c4590035f5d3
+  #   ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
+  - namespace:
+      $ref: /services/ocm/namespaces/uhc-stage-sso-test.yml
+    ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
 
 parameters:
   NAME: subscription-skus
