--- a/data/services/ocm/namespaces/uhc-stage-appsres04ue2.yml
+++ b/data/services/ocm/namespaces/uhc-stage-appsres04ue2.yml
@@ -31,7 +31,8 @@ sharedResources:
 - $ref: /services/app-sre/shared-resources/quayio-pull-secret.yml
 - $ref: /services/ocm/shared-resources/ecr.yml
 - $ref: /services/ocm/shared-resources/service-accounts.yml
-- $ref: /services/ocm/shared-resources/common.yml
+# - $ref: /services/ocm/shared-resources/common.yml
+- $ref: /services/ocm/shared-resources/common-no-subscription-skus.yml
 - $ref: /services/ocm/shared-resources/stage.yml
 
 openshiftResources:
