--- a/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
+++ b/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
@@ -4,7 +4,7 @@ $schema: /app-sre/saas-file-2.yml
 labels:
   service: uhc
 
-name: saas-subscriptions-skus
+name: saas-subscription-skus
 description: SaaS tracking file for UHC Account manager subscription SKUs
 
 app:
