deploy subscription-skus from saas file to production

--- a/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
+++ b/data/services/ocm/ams/cicd/saas-subscriptions-skus.yaml
@@ -37,9 +37,9 @@ resourceTemplates:
   - namespace:
       $ref: /services/ocm/namespaces/uhc-stage-appsres04ue2.yml
     ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
-  # - namespace:
-  #     $ref: /services/ocm/namespaces/uhc-production.yml
-  #   ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
+  - namespace:
+      $ref: /services/ocm/namespaces/uhc-production.yml
+    ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
   - namespace:
       $ref: /services/ocm/namespaces/uhc-stage-sso-test.yml
     ref: ff2c53c1ca6f4f89005c4e7a4f548f5cd8e3e252
