--- a/data/aws/app-sre/account.yml
+++ b/data/aws/app-sre/account.yml
@@ -52,6 +52,9 @@ resetPasswords:
 - user:
     $ref: /teams/ocm/users/gshilin.yml
   requestId: gshilin
+- user:
+    $ref: /teams/ocm/users/oadler.yml
+  requestId: dontPanic
 
 deletionApprovals:
 - type: aws_ecr_repository
