--- a/resources/jenkins/image-builder/secrets.yml
+++ b/resources/jenkins/image-builder/secrets.yml
@@ -1,8 +1,8 @@
 - aws-account: &aws-account
     name: "aws-account"
-    secret-path: "app-interface/image-builder/stage/aws-account"
+    secret-path: "app-sre/integrations-output/terraform-resources/app-sre-stage-01/workers-stage/packer-stage"
     secret-values:
-    - env-var: "PACKER_AWS_ACCESS_KEY_ID"
+    - env-var: "aws_access_key_id"
       vault-key: access_key_id
-    - env-var: "PACKER_AWS_SECRET_ACCESS_KEY"
+    - env-var: "aws_secret_access_key"
       vault-key: secret_access_key
