Add swoodman to stage

--- a/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
+++ b/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
@@ -229,6 +229,7 @@ resourceTemplates:
         - "jsarnovs"
         - "vbommana"
         - "jcueto"
+        - "swoodman"
 
       SUPPORTED_CLOUD_PROVIDERS:
         - name: aws
