Updating files to reflect quayio-migration-jobs repo name change to quay-db-jobs

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -4,7 +4,7 @@ $schema: /app-sre/saas-file-2.yml
 labels:
   service: quayio
 
-name: quayio-migration-jobs
+name: quay-db-jobs
 description: Various db tasks previously done by directly in DB, such as enabling/disabling users.
 
 app:
@@ -22,15 +22,15 @@ managedResourceTypes:
 - Job
 
 imagePatterns:
-- quay.io/app-sre/quayio-migration-jobs
+- quay.io/app-sre/quay-db-jobs
 
 parameters:
-  IMAGE: "quay.io/app-sre/quayio-migration-jobs"
+  IMAGE: "quay.io/app-sre/quay-db-jobs"
 
 resourceTemplates:
-- name: quayio-migration-jobs
+- name: quay-db-jobs
   path: /openshift.yml
-  url: https://github.com/quay/quayio-migration-jobs
+  url: https://github.com/quay/quay-db-jobs
   targets:
   - namespace:
       $ref: /services/quayio/namespaces/quays02ue1.yml
