--- a/data/services/quayio/cicd/ci-ext/jobs.yaml
+++ b/data/services/quayio/cicd/ci-ext/jobs.yaml
@@ -145,18 +145,18 @@ config:
         display_name: quay-mysql-diag build master
 
 - project:
-    name: quayio-migration-jobs
+    name: quay-db-jobs
     label: quayio
     node: app-sre
     gh_org: quay
     quay_org: app-sre
-    gh_repo: quayio-migration-jobs
+    gh_repo: quay-db-jobs
     jobs:
     - 'gh-pr-check':
-        display_name: pr-check quayio-migration-jobs
+        display_name: pr-check quay-db-jobs
         pr_check_script_path: "./pr_check.sh"
         concurrent_build: false
     - 'gh-build-master':
-        display_name: build and push image quayio-migration-jobs
+        display_name: build and push image quay-db-jobs
         build_deploy_script_path: "./build_deploy.sh"
         concurrent_build: false
