--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -24,6 +24,12 @@ managedResourceTypes:
 imagePatterns:
 - quay.io/app-sre/quay-db-jobs
 
+authentication:
+  # required for insights private repositories
+  code:
+    path: app-sre/creds/github-app-sre-bot
+    field: openshift-saas-deploy
+
 parameters:
   IMAGE: "quay.io/app-sre/quay-db-jobs"
 
