add image-users to packer job
Signed-off-by: Feng Huang <fehuang@redhat.com>

--- a/data/services/vault.devshift.net/config/policies/app-sre-ci-ext-approle-policy.yml
+++ b/data/services/vault.devshift.net/config/policies/app-sre-ci-ext-approle-policy.yml
@@ -54,6 +54,10 @@ rules: |
     capabilities = ["read"]
   }
 
+  path "app-sre/image-builder/*" {
+    capabilities = ["read"]
+  }
+
   path "sd-uhc/ci-ext/*" {
     capabilities = ["read"]
   }
