--- a/resources/jenkins/image-builder/jobs-templates.yml
+++ b/resources/jenkins/image-builder/jobs-templates.yml
@@ -8,6 +8,7 @@
         <<: *vault_defaults
         secrets:
         - *aws-account
+        - *image-users
     publishers:
     - slack:
         room: "{slack_channel_notification}"
