--- a/resources/jenkins/image-builder/secrets.yml
+++ b/resources/jenkins/image-builder/secrets.yml
@@ -6,3 +6,9 @@
       vault-key: aws_access_key_id
     - env-var: "PACKER_AWS_SECRET_ACCESS_KEY"
       vault-key: aws_secret_access_key
+- image-users: &image-users
+    name: "image-users"
+    secret-path: "app-sre/image-builder/image-users"
+    secret-values:
+    - env-var: "PACKER_IMAGE_USERS"
+      vault-key: image_users
