Removing empty list of resource Templates

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -32,7 +32,7 @@ authentication:
 parameters:
   IMAGE: "quay.io/app-sre/quay-db-jobs"
 
-resourceTemplates: []
+resourceTemplates:
 - name: quay-db-jobs
   path: /openshift.yml
   url: https://github.com/quay/quay-db-jobs
