comment out quickstarts cloudwatch resource

--- a/data/services/insights/quickstarts/namespaces/quickstarts-stage.yml
+++ b/data/services/insights/quickstarts/namespaces/quickstarts-stage.yml
@@ -32,12 +32,14 @@ terraformResources:
   parameter_group: /terraform/resources/insights/stage/rds/postgres13-parameter-group-quickstarts-stage.yml
   output_resource_name: quickstarts-db
   enhanced_monitoring: true
-- provider: cloudwatch
-  account: insights-stage
-  identifier: quickstarts-stage
-  defaults: /terraform/resources/insights/stage/cloudwatch/cloudwatch-1.yml
-  output_resource_name: cloudwatch
-  es_identifier: kibana-elasticsearch
+# The runtime (nodejs10.x) used in the default file cannot be used to create new instances anymore
+# ref.: https://coreos.slack.com/archives/CCRND57FW/p1641919445141900
+#- provider: cloudwatch
+#  account: insights-stage
+#  identifier: quickstarts-stage
+#  defaults: /terraform/resources/insights/stage/cloudwatch/cloudwatch-1.yml
+#  output_resource_name: cloudwatch
+#  es_identifier: kibana-elasticsearch
 - provider: s3
   account: insights-stage
   identifier: rh-quickstarts-tarballs-stage
