--- a/data/services/insights/rhsm/deploy.yml
+++ b/data/services/insights/rhsm/deploy.yml
@@ -126,7 +126,7 @@ resourceTemplates:
       $ref: /services/insights/rhsm/namespaces/rhsm-prod.yml
     ref: ab023ada3c4077faef4675de7adb47e7f6b0627a
     parameters:
-      SUBSCRIPTION_SYNC_ENABLED: false
+      SUBSCRIPTION_SYNC_ENABLED: true
       PRODUCT_URL: https://product.api.redhat.com/svcrest/product/v3
       SUBSCRIPTION_URL: https://subscription.api.redhat.com/svcrest/subscription/v5
 - name: rhsm-subscriptions-scheduler
@@ -153,7 +153,7 @@ resourceTemplates:
       $ref: /services/insights/rhsm/namespaces/rhsm-prod.yml
     ref: ab023ada3c4077faef4675de7adb47e7f6b0627a
     parameters:
-      SUBSCRIPTION_SYNC_ENABLED: false
+      SUBSCRIPTION_SYNC_ENABLED: true
       OPENSHIFT_ENABLED_ACCOUNT_PROMQL: "group(min_over_time(subscription_labels{ebs_account != '', billing_model='marketplace'}[1h])) by (ebs_account)"
 - name: metrics-worker
   path: /templates/metrics-worker.yml
