Up rhsm deployment mem allocation
Doing this because of an OOM faliure during deployment

--- a/data/services/insights/rhsm/deploy.yml
+++ b/data/services/insights/rhsm/deploy.yml
@@ -17,10 +17,10 @@ pipelinesProvider:
 deployResources:
   requests:
     cpu: 300m
-    memory: 600Mi
+    memory: 4Gi
   limits:
     cpu: 300m
-    memory: 600Mi
+    memory: 4Gi
 
 slack:
   workspace:
