hccm: rollback migration

--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -138,14 +138,14 @@ resourceTemplates:
       # Migrations Image Tag
       DBM_IMAGE_TAG: 749c7f4
       # Migrations Invocation
-      DBM_INVOCATION: "00"
+      DBM_INVOCATION: "01"
       # Migration directive is optional and should be in the form of:
       # <app>[:<migration>][,<app>[:<migration>]...]
       # Ex: "reporting:0200,api:0050"
       # Ex: "reporting:0200"
       # Ex: "reporting"
       # Ex: ""
-      _MIGRATION_DIRECTIVE: ""
+      _MIGRATION_DIRECTIVE: "reporting:0213"
       ######################################
       IMAGE_TAG: 23747cc
       APP_DOMAIN: apps.crcs02ue1.urby.p1.openshiftapps.com
