--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -131,23 +131,23 @@ resourceTemplates:
   # Staging:
   - namespace:
       $ref: /services/insights/hccm/namespaces/stage-hccm-stage.yml
-    ref: 23747ccc0c93e4a1cf260652ef24376faa581c96
+    ref: 1073f0ba15d564c6ece1265f33f1d58828bd914a
     parameters:
       ############# MIGRATIONS #############
       # Change these settings when deploying migrations to Production
       # Migrations Image Tag
-      DBM_IMAGE_TAG: 749c7f4
+      DBM_IMAGE_TAG: 1073f0b
       # Migrations Invocation
-      DBM_INVOCATION: "01"
+      DBM_INVOCATION: "00"
       # Migration directive is optional and should be in the form of:
       # <app>[:<migration>][,<app>[:<migration>]...]
       # Ex: "reporting:0200,api:0050"
       # Ex: "reporting:0200"
       # Ex: "reporting"
       # Ex: ""
-      _MIGRATION_DIRECTIVE: "reporting:0213"
+      _MIGRATION_DIRECTIVE: ""
       ######################################
-      IMAGE_TAG: 23747cc
+      IMAGE_TAG: 1073f0b
       APP_DOMAIN: apps.crcs02ue1.urby.p1.openshiftapps.com
       S3_BUCKET_NAME: hccm-stage-s3
       KOKU_SENTRY_ENV: stage
