Adding image in authentication

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -28,6 +28,9 @@ authentication:
   code:
     path: app-sre/creds/github-app-sre-bot
     field: openshift-saas-deploy
+  image:
+    path: quay.io/app-sre/quay-db-jobs
+    field: all
 
 parameters:
   IMAGE: "quay.io/app-sre/quay-db-jobs"
