add temporary osd-fedramp-ci secret engine kv v1

--- a/data/services/vault.devshift.net/config/policies/osd-fedramp-policy.yml
+++ b/data/services/vault.devshift.net/config/policies/osd-fedramp-policy.yml
@@ -9,3 +9,6 @@ rules: |
   path "osd-fedramp/*" {
     capabilities = ["create", "read", "update", "delete", "list"]
   }
+  path "osd-fedramp-ci/*" {
+    capabilities = ["create", "read", "update", "delete", "list"]
+  }
