delegate fedramp.devshift.net to fedramp app-sre aws account

--- a/data/aws/app-sre/dns/devshift.net.yaml
+++ b/data/aws/app-sre/dns/devshift.net.yaml
@@ -49,13 +49,23 @@ records:
   - ns-718.awsdns-25.net
 
 # https://issues.redhat.com/browse/APPSRE-4156
+# app-sre aws account
+# used for acme challenges
+# - name: fedramp
+#   type: NS
+#   records:
+#   - ns-553.awsdns-05.net
+#   - ns-1810.awsdns-34.co.uk
+#   - ns-156.awsdns-19.com
+#   - ns-1146.awsdns-15.org
+# osd-fedramp-app-sre aws account
 - name: fedramp
   type: NS
   records:
-  - ns-553.awsdns-05.net
-  - ns-1810.awsdns-34.co.uk
-  - ns-156.awsdns-19.com
-  - ns-1146.awsdns-15.org
+  - ns-0.awsdns-us-gov-00.com
+  - ns-1024.awsdns-us-gov-00.org
+  - ns-1536.awsdns-us-gov-00.us
+  - ns-512.awsdns-us-gov-00.net
 
 - {name: vault, type: CNAME, _target_cluster: {$ref: /openshift/app-sre-prod-01/cluster.yml}}
 - {name: vault.stage, type: CNAME, _target_cluster: {$ref: /openshift/app-sre-stage-02/cluster.yml}}
