Updating vault path

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -29,7 +29,7 @@ authentication:
     path: app-sre/creds/github-app-sre-bot
     field: openshift-saas-deploy
   image:
-    path: quay.io/app-sre/quay-db-jobs
+    path: app-sre/quay/app-sre-pull
     field: all
 
 parameters:
