Disable basic auth and require IdP auth in FedRAMP stage, for QE

--- a/data/services/insights/gateway/deploy.yml
+++ b/data/services/insights/gateway/deploy.yml
@@ -75,8 +75,8 @@ resourceTemplates:
       $ref: /services/insights/gateway/namespaces/3scale-fedramp-stage.yml
     ref: master
     parameters:
-      ENFORCE_IDP_AUTH: false
-      DISABLE_BASIC_AUTH: false
+      ENFORCE_IDP_AUTH: true
+      DISABLE_BASIC_AUTH: true
       DEPLOYMENT_ENVIRONMENT: production
       IMAGE_TAG: e605fda
       INSTANCE_ENVIRONMENT: prod
