Commenting enabling weaveworks user

--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -50,13 +50,13 @@ resourceTemplates:
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "enable_users"
       ARGS: "weaveworks"
-  - namespace:
-      $ref: /services/quayio/namespaces/quayp05ue1.yml
-    ref: 11f58b471e517d9d5b0ca13a2f31b0dda2560d2c
-    parameters:
-      JOB_NAME: "enable-weaveworks-prod-2021-12-06"
-      ACTIVE_DEADLINE_SECONDS: "600"
-      DB_HOST_SECRET: "quay-db-config-secret"
-      DB_CREDS_SECRET: "quay-db-config-secret"
-      SUBCOMMAND: "enable_users"
-      ARGS: "weaveworks"
+#  - namespace:
+#      $ref: /services/quayio/namespaces/quayp05ue1.yml
+#    ref: 11f58b471e517d9d5b0ca13a2f31b0dda2560d2c
+#    parameters:
+#      JOB_NAME: "enable-weaveworks-prod-2021-12-06"
+#      ACTIVE_DEADLINE_SECONDS: "600"
+#      DB_HOST_SECRET: "quay-db-config-secret"
+#      DB_CREDS_SECRET: "quay-db-config-secret"
+#      SUBCOMMAND: "enable_users"
+#      ARGS: "weaveworks"
