Keep basic auth enabled

--- a/data/services/insights/gateway/deploy.yml
+++ b/data/services/insights/gateway/deploy.yml
@@ -76,7 +76,7 @@ resourceTemplates:
     ref: master
     parameters:
       ENFORCE_IDP_AUTH: true
-      DISABLE_BASIC_AUTH: true
+      DISABLE_BASIC_AUTH: false
       DEPLOYMENT_ENVIRONMENT: production
       IMAGE_TAG: e605fda
       INSTANCE_ENVIRONMENT: prod
