--- a/data/services/insights/notifications/deploy-clowder.yml
+++ b/data/services/insights/notifications/deploy-clowder.yml
@@ -67,13 +67,14 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/notifications/namespaces/stage-notifications-stage.yml
     # notifications-backend commit hash that determines the clowdapp-backend.yaml version
-    ref: 8de70c0176617cf444a735077c7fdb5086b82cbf
+    ref: 6edbe6f770546488bdee9fd1ee00db8f1a3996f0
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: 8de70c0
+      IMAGE_TAG: 6edbe6f
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       KAFKA_CONSUMED_TOTAL_CHECKER_ENABLED: true
+      KAFKA_CONSUMED_TOTAL_CHECKER_INITIAL_DELAY: 60m
       KAFKA_CONSUMED_TOTAL_CHECKER_PERIOD: 60m
       MIN_REPLICAS: 3
       MP_MESSAGING_INCOMING_INGRESS_MAX_POLL_INTERVAL_MS: 1200000
@@ -127,10 +128,10 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/notifications/namespaces/stage-notifications-stage.yml
     # notifications-backend commit hash that determines the clowdapp-aggregator.yaml version
-    ref: 8de70c0176617cf444a735077c7fdb5086b82cbf
+    ref: 6edbe6f770546488bdee9fd1ee00db8f1a3996f0
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: 8de70c0
+      IMAGE_TAG: 6edbe6f
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       CRONTAB_AGGREGATION_JOB: 0 * * * *
@@ -167,10 +168,10 @@ resourceTemplates:
   - namespace:
       $ref: /services/insights/notifications/namespaces/stage-notifications-stage.yml
     # notifications-gw commit hash that determines the clowdapp.yaml version
-    ref: a79586346d2f7c062af184bf49af1c7e9aa89a21
+    ref: 11fc11b9c94fc8e383344e861684ab29ce552227
     parameters:
       # quay.io tag that will be deployed
-      IMAGE_TAG: a795863
+      IMAGE_TAG: 11fc11b
       CLOUDWATCH_ENABLED: true
       CPU_REQUEST: 200m
       MIN_REPLICAS: 3
