Update kafka and connect version to 2.8.0
Signed-off-by: Chris Mitchell <cmitchel@redhat.com>

--- a/data/services/insights/strimzi/saas.yml
+++ b/data/services/insights/strimzi/saas.yml
@@ -62,6 +62,7 @@ resourceTemplates:
     ref: master
     parameters:
       BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_HOST}:9093
+      KAFKA_CONNECT_VERSION: 2.8.0
   - namespace:
       $ref: /services/insights/strimzi/namespaces/platform-mq-prod.yml
     ref: 657be64b633a027f9b5d19753277fa2044f1f34b
@@ -85,6 +86,7 @@ resourceTemplates:
       KAFKA_HEAP_OPTS_XMS: 6g
       KAFKA_HEAP_OPTS_XMX: 6g
       KAFKA_VOL_SIZE: 450Gi
+      KAFKA_VERSION: 2.8.0
   - namespace:
       $ref: /services/insights/strimzi/namespaces/platform-mq-prod.yml
     ref: 657be64b633a027f9b5d19753277fa2044f1f34b
