--- a/data/services/insights/xjoin/build.yml
+++ b/data/services/insights/xjoin/build.yml
@@ -26,7 +26,7 @@ config:
     gh_repo: xjoin-kafka-connect
     quay_org: cloudservices
     jobs:
-    - gh-build-master:
+    - insights-gh-build-master:
         display_name: xjoin-kafka-connect build-master
 
 - project:
