Promote kafka and connect refs to prod
Signed-off-by: Chris Mitchell <cmitchel@redhat.com>

--- a/data/services/insights/strimzi/saas.yml
+++ b/data/services/insights/strimzi/saas.yml
@@ -65,9 +65,10 @@ resourceTemplates:
       KAFKA_CONNECT_VERSION: 2.8.0
   - namespace:
       $ref: /services/insights/strimzi/namespaces/platform-mq-prod.yml
-    ref: 657be64b633a027f9b5d19753277fa2044f1f34b
+    ref: 995fb12b060442cd22092e5c969dc9d6d84affe7
     parameters:
       BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_HOST}:9093
+      KAFKA_CONNECT_VERSION: 2.8.0
 - name: strimzi
   path: /deploys/openshift/amq-streams.yaml
   url: https://github.com/RedHatInsights/platform-mq
@@ -89,7 +90,7 @@ resourceTemplates:
       KAFKA_VERSION: 2.8.0
   - namespace:
       $ref: /services/insights/strimzi/namespaces/platform-mq-prod.yml
-    ref: 657be64b633a027f9b5d19753277fa2044f1f34b
+    ref: 995fb12b060442cd22092e5c969dc9d6d84affe7
     parameters:
       KAFKA_CPU_REQUESTS: 2
       KAFKA_CPU_LIMITS: 4
@@ -99,6 +100,7 @@ resourceTemplates:
       KAFKA_HEAP_OPTS_XMS: 6g
       KAFKA_HEAP_OPTS_XMX: 6g
       KAFKA_VOL_SIZE: 800Gi
+      KAFKA_VERSION: 2.8.0
 - name: kafka-topics
   path: /deploys/openshift/kafka-topics.yaml
   url: https://github.com/RedHatInsights/platform-mq
