--- a/data/services/quayio/namespaces/quays02ue1.yml
+++ b/data/services/quayio/namespaces/quays02ue1.yml
@@ -249,7 +249,7 @@ terraformResources:
     - target: quayio-stage-py3
       weight: 100
   - condition:
-      path: /api/v1/packages*
+      path: /cnr*
       methods: read
     action:
     - target: quayio-stage-py2
