don't notify on success

--- a/resources/jenkins/insights/ci-int/job-templates.yaml
+++ b/resources/jenkins/insights/ci-int/job-templates.yaml
@@ -47,7 +47,7 @@
     - slack:
         room: '{slack_channel_notification}'
         notify-start: false
-        notify-success: true
+        notify-success: false
         notify-failure: true
         notify-repeated-failure: true
     <<: *gl_timed
