--- a/data/teams/assisted-installer/users/brotman.yml
+++ b/data/teams/assisted-installer/users/brotman.yml
@@ -5,7 +5,7 @@ labels:
   team: assisted-installer
 
 name: Bat-Zion Rotman
-org_username: batzionb
+org_username: brotman
 github_username: batzionb
 
 roles:
