--- a/data/services/assisted-installer/cicd/saas.yaml
+++ b/data/services/assisted-installer/cicd/saas.yaml
@@ -276,6 +276,13 @@ resourceTemplates:
             "url": "https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.9/4.9.0/rhcos-4.9.0-aarch64-live.aarch64.iso",
             "rootfs_url": "https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.9/4.9.0/rhcos-4.9.0-aarch64-live-rootfs.aarch64.img",
             "version": "49.84.202110080947-0"
+          },
+          {
+            "openshift_version": "4.10",
+            "cpu_architecture": "x86_64",
+            "url": "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/pre-release/4.10.0-0.nightly-2021-11-29-191648/rhcos-4.10.0-0.nightly-2021-11-29-191648-x86_64-live.x86_64.iso",
+            "rootfs_url": "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/pre-release/4.10.0-0.nightly-2021-11-29-191648/rhcos-4.10.0-0.nightly-2021-11-29-191648-x86_64-live-rootfs.x86_64.img",
+            "version": "410.84.202111291603-0"
           }
         ]
       RELEASE_IMAGES: |
@@ -311,6 +318,13 @@ resourceTemplates:
             "cpu_architecture": "arm64",
             "url": "quay.io/openshift-release-dev/ocp-release:4.9.9-aarch64",
             "version": "4.9.9"
+          },
+          {
+            "openshift_version": "4.10",
+            "cpu_architecture": "x86_64",
+            "url": "quay.io/openshift-release-dev/ocp-release:4.10.0-fc.0-x86_64",
+            "version": "4.10.0-fc.0",
+            "support_level": "beta"
           }
         ]
       REGISTRY_CREDS: qa@redhat.com:redhatqa
