--- a/data/services/insights/entitlements/deploy.yml
+++ b/data/services/insights/entitlements/deploy.yml
@@ -50,9 +50,8 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/entitlements/namespaces/dev-entitlements-ci.yml
-    ref: e4dff3981e9d59f528b4e3b44e3688b7256f320b
+    ref: master
     parameters:
-      IMAGE_TAG: e4dff39
       SUBS_HOST: https://subscription.qa.api.redhat.com
 - name: entitlements-bundle-config-ci
   path: /configs/ci/bundles.yml
@@ -71,9 +70,8 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/entitlements/namespaces/dev-entitlements-qa.yml
-    ref: e4dff3981e9d59f528b4e3b44e3688b7256f320b
+    ref: master
     parameters:
-      IMAGE_TAG: e4dff39
       SUBS_HOST: https://subscription.qa.api.redhat.com
 - name: entitlements-bundle-config-qa
   path: /configs/qa/bundles.yml
@@ -92,9 +90,8 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/entitlements/namespaces/stage-entitlements-stage.yml
-    ref: e4dff3981e9d59f528b4e3b44e3688b7256f320b
+    ref: master
     parameters:
-      IMAGE_TAG: e4dff39
       SUBS_HOST: https://subscription.stage.api.redhat.com
 - name: entitlements-bundle-config-stage
   path: /configs/stage/bundles.yml
@@ -113,9 +110,8 @@ resourceTemplates:
   targets:
   - namespace:
       $ref: /services/insights/entitlements/namespaces/entitlements-fedramp-stage.yml
-    ref: e4dff3981e9d59f528b4e3b44e3688b7256f320b
+    ref: master
     parameters:
-      IMAGE_TAG: e4dff39
       SUBS_HOST: https://subscription.stage.api.redhat.com
 - name: entitlements-bundle-config-stage
   path: /configs/fedramp-stage/bundles.yml
