--- a/data/services/insights/xjoin/deploy.yml
+++ b/data/services/insights/xjoin/deploy.yml
@@ -14,6 +14,14 @@ app:
 pipelinesProvider:
   $ref: /services/insights/pipelines/tekton.crc-pipelines.appsrep05ue1.yaml
 
+deployResources:
+  requests:
+    cpu: 100m
+    memory: 250Mi
+  limits:
+    cpu: 200m
+    memory: 500Mi
+
 slack:
   workspace:
     $ref: /dependencies/slack/coreos.yml
