Propertly set RHAM RBAC port

--- a/data/services/insights/rhsm/deploy.yml
+++ b/data/services/insights/rhsm/deploy.yml
@@ -90,7 +90,7 @@ resourceTemplates:
       name: RedHatInsights-rhsm-subscriptions-gh-build-main
     parameters:
       RHSM_RBAC_HOST: ${RBAC_HOST}
-      RHSM_RBAC_PORT: ${RBAC_PORT}
+      RHSM_RBAC_PORT: '8080'
   - namespace:
       $ref: /services/insights/rhsm/namespaces/stage-rhsm-stage.yml
     ref: main
@@ -101,13 +101,13 @@ resourceTemplates:
     parameters:
       SERVER_MAX_HTTP_HEADER_SIZE: '47000'
       RHSM_RBAC_HOST: ${RBAC_HOST} 
-      RHSM_RBAC_PORT: ${RBAC_PORT}
+      RHSM_RBAC_PORT: '8080'
   - namespace:
       $ref: /services/insights/rhsm/namespaces/rhsm-prod.yml
     ref: ab023ada3c4077faef4675de7adb47e7f6b0627a
     parameters:
       RHSM_RBAC_HOST: ${RBAC_HOST}
-      RHSM_RBAC_PORT: ${RBAC_PORT}
+      RHSM_RBAC_PORT: '8080'
 - name: rhsm-subscriptions-capacity-ingress
   path: /templates/rhsm-subscriptions-capacity-ingress.yml
   url: https://github.com/RedHatInsights/rhsm-subscriptions
