sig-sre switch to dedicated-readers

--- a/data/teams/sd-sre/roles/sig-sre.yml
+++ b/data/teams/sd-sre/roles/sig-sre.yml
@@ -12,4 +12,4 @@ tag_on_cluster_updates: false
 access:
 - cluster:
     $ref: /openshift/app-sre-prod-04/cluster.yml
-  group: dedicated-admins
+  group: dedicated-readers
