hccm: promote 654254a migrations to stage

--- a/data/services/insights/hccm/deploy-clowder.yml
+++ b/data/services/insights/hccm/deploy-clowder.yml
@@ -136,16 +136,16 @@ resourceTemplates:
       ############# MIGRATIONS #############
       # Change these settings when deploying migrations to Production
       # Migrations Image Tag
-      DBM_IMAGE_TAG: bacb189
+      DBM_IMAGE_TAG: 654254a
       # Migrations Invocation
-      DBM_INVOCATION: "01"
+      DBM_INVOCATION: "00"
       # Migration directive is optional and should be in the form of:
       # <app>[:<migration>][,<app>[:<migration>]...]
       # Ex: "reporting:0200,api:0050"
       # Ex: "reporting:0200"
       # Ex: "reporting"
       # Ex: ""
-      _MIGRATION_DIRECTIVE: "reporting:0214"
+      _MIGRATION_DIRECTIVE: ""
       ######################################
       IMAGE_TAG: 9c25ffa
       APP_DOMAIN: apps.crcs02ue1.urby.p1.openshiftapps.com
