--- a/resources/terraform/resources/quayio-stage/elasticache-2.yml
+++ b/resources/terraform/resources/quayio-stage/elasticache-2.yml
@@ -1,7 +1,7 @@
 replication_group_id: quay-redis-dev
 replication_group_description: quay elasticache replication group
 number_cache_clusters: 2
-node_type: cache.r6g.xlarge
+node_type: cache.r3.xlarge
 automatic_failover_enabled: true
 auto_minor_version_upgrade: false
 availability_zones: ["us-east-1a", "us-east-1b"]
