Making eu west stage unscheduable

--- a/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
+++ b/data/services/managed-services/cicd/saas/saas-kas-fleet-manager.yaml
@@ -266,7 +266,7 @@ resourceTemplates:
           cloud_provider: aws
           region: eu-west-1
           multi_az: true
-          schedulable: true
+          schedulable: false
           kafka_instance_limit: 3
           supported_instance_type: standard,eval
 
