Change handle name

--- a/data/teams/managed-services/permissions/cos-coreos-slack.yml
+++ b/data/teams/managed-services/permissions/cos-coreos-slack.yml
@@ -7,7 +7,7 @@ name: cos-coreos-slack
 description: Managed Connector Services Primary (managed via app-interface)
 
 service: slack-usergroup
-handle: cos-primary
+handle: cos-control-plane-primary
 
 workspace:
   $ref: /dependencies/slack/coreos.yml
