Move repos to correct service

--- a/data/dependencies/slack/coreos.yml
+++ b/data/dependencies/slack/coreos.yml
@@ -110,6 +110,7 @@ managedUsergroups:
 - clusterimagesets
 - saas-osd-operators
 - code-quarkus-team
+- cos-control-plane-primary
 - cincinnati-team
 - cs-sre-team
 - cs-sre-primary
