--- a/data/services/managed-connectors/app.yaml
+++ b/data/services/managed-connectors/app.yaml
@@ -45,5 +45,38 @@ quayRepos:
         role: read
     items:
       - name: cos-fleet-manager
-        description: "A service for provisioning and managing fleets of connector instances."
+        description: Private repo for the cos-fleet-manager
+        public: false
+      - name: cos-fleet-catalog-camel
+        description: Private repo for the cos-fleet-catalog-camel
+        public: false
+      - name: cos-fleetshard-meta-camel
+        description: Private repo for the cos-fleetshard-meta-camel
+        public: false
+      - name: cos-ui
+        description: Private repo for the cos-ui
+        public: false
+      - name: cos-fleetshard
+        description: Private repo for the cos-fleetshard operator
+        public: false
+      - name: cos-fleet-catalog-debezium
+        description: Private repo for the cos-fleet-catalog-debezium
+        public: false
+      - name: cos-fleetshard-meta-debezium
+        description: Private repo for the cos-fleetshard-meta-debezium
+        public: false
+      - name: cos-fleetshard-bundle
+        description: Private repo for the cos-fleetshard-bundle
+        public: false
+      - name: cos-fleetshard-index
+        description: Private repo for the cos-fleetshard-index
+        public: false
+      - name: cos-fleetshard-sync
+        description: Private repo for the cos-fleetshard-sync
+        public: false
+      - name: cos-fleetshard-operator-camel
+        description: Private repo for the cos-fleetshard-operator for Camel K based connectors
+        public: false
+      - name: cos-fleetshard-operator-debezium
+        description: Private repo for the cos-fleetshard-operator for Debezium based connectors
         public: false
