Adding secret for quay db jobs

--- a/data/services/quayio/namespaces/quays02ue1.yml
+++ b/data/services/quayio/namespaces/quays02ue1.yml
@@ -154,6 +154,12 @@ openshiftResources:
   vault_tls_secret_path: app-interface/quayio-stage/quayio-stage/routes/quay-service-tool
   vault_tls_secret_version: 3
 
+- provider: resource-template
+  type: extracurlyjinja2
+  path: /quayio-stage/quay/quay-db-jobs-config.secret.yaml
+  variables:
+    name: quay-db-jobs-config
+    vault_secret_version: 1
 
 terraformResources:
 - provider: acm
