--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -49,7 +49,7 @@ resourceTemplates:
       DB_HOST_SECRET: "quayio-stage-57-py3-rds"
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "enable_users"
-      ARGS: "weaveworks"
+      USERS: "weaveworks"
 #  - namespace:
 #      $ref: /services/quayio/namespaces/quayp05ue1.yml
 #    ref: 11f58b471e517d9d5b0ca13a2f31b0dda2560d2c
@@ -59,4 +59,15 @@ resourceTemplates:
 #      DB_HOST_SECRET: "quay-db-config-secret"
 #      DB_CREDS_SECRET: "quay-db-config-secret"
 #      SUBCOMMAND: "enable_users"
-#      ARGS: "weaveworks"
+#      USERS: "weaveworks"
+  - namespace:
+      $ref: /services/quayio/namespaces/quays02ue1.yml
+    ref: 11f58b471e517d9d5b0ca13a2f31b0dda2560d2c # need to update this
+    parameters:
+      JOB_NAME: "create-database-user-2022-01-19"
+      ACTIVE_DEADLINE_SECONDS: "600"
+      DB_HOST_SECRET: "quayio-stage-57-py3-rds"
+      DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
+      SUBCOMMAND: "create_database_user"
+      NEW_DB_USER: "quay-service-tool-config"
+      NEW_DB_USER_PASSWORD: "quay-service-tool-config"
