--- a/data/teams/insights/roles/rbac.yml
+++ b/data/teams/insights/roles/rbac.yml
@@ -28,9 +28,9 @@ access:
 - namespace:
     $ref: /services/insights/rbac/namespaces/rbac-fedramp-prod.yml
   role: view
-- namespace:
-    $ref: /services/insights/rbac/namespaces/perf-rbac-perf.yml
-  role: edit
+# - namespace:
+#     $ref: /services/insights/rbac/namespaces/perf-rbac-perf.yml
+#   role: edit
 
 owned_saas_files:
 - $ref: /services/insights/rbac/deploy.yml
