Route HEAD requests to py2 for prod quay.io

--- a/data/services/quayio/namespaces/quayp05ue1.yml
+++ b/data/services/quayio/namespaces/quayp05ue1.yml
@@ -268,8 +268,16 @@ terraformResources:
   - condition:
       path: /v2/*
       methods:
-      - GET
       - HEAD
+    action:
+    - target: quayio-production-py2
+      weight: 100
+    - target: quayio-production-py3
+      weight: 0
+  - condition:
+      path: /v2/*
+      methods:
+      - GET
       - OPTIONS
     action:
     - target: quayio-production-py2
