--- a/data/services/quayio/saas/quay-db-jobs.yaml
+++ b/data/services/quayio/saas/quay-db-jobs.yaml
@@ -69,5 +69,5 @@ resourceTemplates:
       DB_HOST_SECRET: "quayio-stage-57-py3-rds"
       DB_CREDS_SECRET: "quayio-stage-57-py3-rds"
       SUBCOMMAND: "create_database_user"
-      NEW_DB_USER: "quay-service-tool-config"
-      NEW_DB_USER_PASSWORD: "quay-service-tool-config"
+      NEW_DB_USER: "quay-db-jobs-config"
+      NEW_DB_USER_PASSWORD: "quay-db-jobs-config"
