--- a/resources/observability/grafana/grafana-dashboards.configmap.yaml
+++ b/resources/observability/grafana/grafana-dashboards.configmap.yaml
@@ -228,6 +228,15 @@ data:
                 },
                 "orgId": 1,
                 "type": "file"
+            },
+            {
+                "folder": "OCP-SLOs",
+                "name": "OCP SLOs",
+                "options": {
+                    "path": "/grafana-dashboard-definitions/OCP-SLOs"
+                },
+                "orgId": 1,
+                "type": "file"
             }
         ]
     }
