--- a/data/teams/sd-sre/roles/sig-sre.yml
+++ b/data/teams/sd-sre/roles/sig-sre.yml
@@ -13,3 +13,6 @@ access:
 - cluster:
     $ref: /openshift/app-sre-prod-04/cluster.yml
   group: dedicated-readers
+
+owned_saas_files:
+- $ref: /teams/ocp-upstream/cicd/saas-ocp-slo-dashboards.yaml
