--- a/data/teams/ocp-upstream/cicd/saas-ocp-slo-dashboards.yaml
+++ b/data/teams/ocp-upstream/cicd/saas-ocp-slo-dashboards.yaml
@@ -10,7 +10,7 @@ app:
   $ref: /services/app-sre/app.yml # placeholder until sig-sre has an app file
 
 pipelinesProvider:
-  $ref: /services/app-interface/pipelines/tekton.app-sre-pipelines.app-sre-prod-01.yaml
+  $ref: /services/app-interface/pipelines/tekton.app-sre-pipelines.appsrep05ue1.yaml
 
 slack:
   workspace:
