--- a/data/teams/sig-sre/roles/sig-sre.yml
+++ b/data/teams/sig-sre/roles/sig-sre.yml
@@ -10,9 +10,17 @@ permissions: []
 tag_on_cluster_updates: false
 
 access:
+# OCM cluster
 - cluster:
     $ref: /openshift/app-sre-prod-04/cluster.yml
   group: dedicated-readers
+# sig-sre-pipelines tekton access
+- namespace:
+    $ref: /teams/sig-sre/cicd/sig-sre-pipelines.appsrep05ue1.yaml
+  role: view
+- namespace:
+    $ref: /teams/sig-sre/cicd/sig-sre-pipelines.appsrep05ue1.yaml
+  role: tekton-trigger-access
 
 owned_saas_files:
 - $ref: /teams/ocp-upstream/cicd/saas-ocp-slo-dashboards.yaml
